# vpn-bot

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  biome.jsonc  bot.service  docker-compose.yml  google-sheet.appscript  package-lock.json  package.json  schema.prisma  tsconfig.json
.github/workflows/: build.yml  release.yml
migrations/20250805162745_init/: migration.sql
migrations/20250910151011_add_trial_fields/: migration.sql
migrations/20250910151124_add_trial_fields/: migration.sql
src/: bot.ts  index.ts  keyboards.ts  main.rs  server.ts  state.ts  utils.ts
src/handlers/: clash.ts  connect.ts  delete.ts  feedback.ts  index.ts  proto.ts  score.ts  site.ts  start.ts  stat.ts  sub.ts
src/handlers/callback/: clash.ts  inbound.ts  proto.ts  sub.ts
src/proto/: clash.ts  index.ts  vless.ts  vmess.ts  wireguard.ts
src/shared/: config.ts  generate.ts  keyboards.ts
src/site/: index.ts  types.ts
src/types/: clash.ts  conn.ts  env.d.ts  index.ts  node.ts  stat.ts  user.ts
