[package]
name = "frkn-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
pretty_env_logger = "0.5"
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
